@@ -18,6 +18,12 @@ $Id$
 from zope.interface import Interface
 from zope.interface import Attribute
 
+class IHTMLScrubber(Interface):
+    """ Utility inteface for scrubbing user-supplied HTML.
+    """
+    def scrub(html):
+        """ Return 'scrubbed' HTML.
+        """
 
 class IDocument(Interface):
 
