@@ -2,6 +2,11 @@ CMF 2.1.0-beta2 (unreleased)
 
   Bug Fixes
 
+    - Use a utility, registered for
+      'Products.CMFDefault.interfaces.IHTMLScrubber', to perform scrubbing
+      of HTML;  fall back to the old, hard-wired behavior.
+      (http://www.zope.org/Collectors/CMF/452)
+
     - Remove antique usage of marker attributes in favor of interfaces,
       leaving BBB behind for places potentially affecting third-party code.
       (http://www.zope.org/Collectors/CMF/440)
